# Marketplace

./: .env.example  .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
marketplace/: manage.py
marketplace/about/: apps.py
marketplace/catalog/: admin.py  models.py  validators.py
marketplace/catalog/migrations/: 0001_initial.py  0002_alter_item_text.py  0003_category_canonical_name_tag_canonical_name.py
marketplace/catalog/tests/: factories.py
marketplace/catalog/tests/models/: test_models.py
marketplace/catalog/tests/validators/: test_validatemustcontain.py
marketplace/core/: models.py  tests.py
marketplace/core/tests/: factories.py
marketplace/homepage/: tests.py  urls.py  views.py
marketplace/marketplace/: asgi.py  middleware.py  settings.py  tests.py  urls.py  wsgi.py
requirements/: dev.txt
