[project]
name = "marketplace"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2.9",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "django-dbml>=0.10.1",
    "django-debug-toolbar>=6.1.0",
    "ruff>=0.14.9",
]
test = [
    "factory-boy>=3.3.3",
    "faker>=39.0.0",
    "parameterized>=0.9.0",
]
